# NeuroFixer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readmeNotes.txt
.github/ISSUE_TEMPLATE/: attention_module_proposal.md  model_family_proposal.md
functions/: EncodingGate.py  EncodingModule.py  FusionBridge.py
functions/demo/: EncodingGate_demo.py  EncodingModule_demo.py  FusionBridge_demo.py
neurofixer/: __init__.py
neurofixer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
neurofixer/demo/: __init__.py  arguments.py  functions.py  parameters.py  run_demo.py
neurofixer/models/: __init__.py  registry.py
neurofixer/models/neurofuser_basic/: __init__.py  attention.py  blocks.py  cnn.py  vit.py
neurofixer/models/neurofuser_demo/: __init__.py
neurofixer/modules/: __init__.py  controller.py  encoding_gate.py  encoding_module.py  fusion_bridge.py
neurofixer/utils/: __init__.py  token_ops.py
neurofuser_demo/demo/: arguments.py  functions.py  parameters.py
templates/: ATTENTION_HEAD_TEMPLATE.py
tests/: test_smoke.py
tools/: _init.py
